--- a/leaflet/GGCompassNavView.xib
+++ b/leaflet/GGCompassNavView.xib
@@ -16,13 +16,13 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Pointer.png" translatesAutoresizingMaskIntoConstraints="NO" id="oi9-iZ-sgK">
-                    <rect key="frame" x="172" y="464" width="31" height="61"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="pointer.png" translatesAutoresizingMaskIntoConstraints="NO" id="oi9-iZ-sgK">
+                    <rect key="frame" x="172" y="510" width="31" height="61"/>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="58J-QJ-JsU">
                     <rect key="frame" x="19" y="107" width="336" height="128"/>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Center.png" translatesAutoresizingMaskIntoConstraints="NO" id="ESJ-zc-IK7">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="compassPOIDot.png" translatesAutoresizingMaskIntoConstraints="NO" id="ESJ-zc-IK7">
                     <rect key="frame" x="175" y="243" width="25" height="25"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Destination" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eUt-nX-COg">
@@ -31,6 +31,9 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="trail.png" translatesAutoresizingMaskIntoConstraints="NO" id="VIU-Ak-oPg">
+                    <rect key="frame" x="167" y="295" width="40" height="180"/>
+                </imageView>
             </subviews>
             <color key="backgroundColor" red="0.25490196078431371" green="0.64313725490196083" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -44,7 +47,8 @@
         </view>
     </objects>
     <resources>
-        <image name="Center.png" width="77" height="78"/>
-        <image name="Pointer.png" width="62" height="123"/>
+        <image name="compassPOIDot.png" width="36" height="36"/>
+        <image name="pointer.png" width="62" height="123"/>
+        <image name="trail.png" width="81" height="360"/>
     </resources>
 </document>
