--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -906,6 +906,20 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b85-44-dJF">
                                 <rect key="frame" x="0.0" y="20" width="600" height="226"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kgY-Gj-UEU">
+                                <rect key="frame" x="20" y="176" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="4nD-F3-Seo"/>
+                                    <constraint firstAttribute="width" constant="60" id="Jcy-Zz-Uyl"/>
+                                </constraints>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sy8-wY-GU8">
+                                <rect key="frame" x="520" y="176" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="8BI-i8-4BN"/>
+                                    <constraint firstAttribute="height" constant="60" id="wGN-KW-bjc"/>
+                                </constraints>
+                            </imageView>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aLW-fz-lUh">
                                 <rect key="frame" x="16" y="256" width="568" height="300"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -919,6 +933,8 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="aLW-fz-lUh" firstAttribute="leading" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-584" id="3v1-hx-xiW"/>
+                            <constraint firstItem="Sy8-wY-GU8" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-10" id="5at-mf-cTG"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="top" secondItem="b85-44-dJF" secondAttribute="bottom" constant="10" id="5ed-p7-neo"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" id="77u-Ag-Q69"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="trailing" secondItem="Tmm-BH-rkz" secondAttribute="trailingMargin" id="7CT-an-6zJ"/>
@@ -927,6 +943,9 @@
                             <constraint firstItem="b85-44-dJF" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="AkA-zR-ZyJ"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" constant="-16" id="d5Z-Sp-XFv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-16" id="fZh-oi-3YQ"/>
+                            <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="kgY-Gj-UEU" secondAttribute="leading" constant="-20" id="m3X-PZ-T5y"/>
+                            <constraint firstItem="kgY-Gj-UEU" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-10" id="taz-29-uKW"/>
+                            <constraint firstItem="Sy8-wY-GU8" firstAttribute="trailing" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-20" id="z7W-Ra-Gxw"/>
                         </constraints>
                     </view>
                     <toolbarItems>
@@ -950,7 +969,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xvt-3p-joO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4168" y="2507"/>
+            <point key="canvasLocation" x="4132" y="2493"/>
         </scene>
     </scenes>
     <resources>
