--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -35,7 +35,7 @@
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DDe-bX-wAz">
                                             <rect key="frame" x="78" y="28" width="42" height="21"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="11"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
@@ -567,7 +567,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ps4-7E-yEm">
                                                     <rect key="frame" x="72" y="35" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -930,23 +930,46 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lkT-EM-yLV">
+                                <rect key="frame" x="16" y="20" width="568" height="536"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="jns-8U-vqO" firstAttribute="top" secondItem="lkT-EM-yLV" secondAttribute="bottom" id="2GI-wP-oLS"/>
+                            <constraint firstItem="lkT-EM-yLV" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" id="3a1-Yz-TeN"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="leading" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-584" id="3v1-hx-xiW"/>
                             <constraint firstItem="Sy8-wY-GU8" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-10" id="5at-mf-cTG"/>
+                            <constraint firstItem="lkT-EM-yLV" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="5az-PF-Q8i"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="top" secondItem="b85-44-dJF" secondAttribute="bottom" constant="10" id="5ed-p7-neo"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" id="77u-Ag-Q69"/>
                             <constraint firstItem="aLW-fz-lUh" firstAttribute="trailing" secondItem="Tmm-BH-rkz" secondAttribute="trailingMargin" id="7CT-an-6zJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="lkT-EM-yLV" secondAttribute="trailing" id="7uz-kX-qBx"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="81A-aD-kRF"/>
                             <constraint firstItem="jns-8U-vqO" firstAttribute="top" secondItem="aLW-fz-lUh" secondAttribute="bottom" id="Aae-J5-bNH"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="AkA-zR-ZyJ"/>
+                            <constraint firstItem="lkT-EM-yLV" firstAttribute="top" secondItem="5xx-dS-ZVL" secondAttribute="bottom" id="MvZ-9a-nz2"/>
+                            <constraint firstItem="lkT-EM-yLV" firstAttribute="leading" secondItem="kgY-Gj-UEU" secondAttribute="trailing" id="XJr-Qf-dpZ"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="Tmm-BH-rkz" secondAttribute="leadingMargin" constant="-16" id="d5Z-Sp-XFv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-16" id="fZh-oi-3YQ"/>
+                            <constraint firstItem="Sy8-wY-GU8" firstAttribute="leading" secondItem="lkT-EM-yLV" secondAttribute="trailing" id="i7M-Zk-otl"/>
                             <constraint firstItem="b85-44-dJF" firstAttribute="leading" secondItem="kgY-Gj-UEU" secondAttribute="leading" constant="-20" id="m3X-PZ-T5y"/>
                             <constraint firstItem="kgY-Gj-UEU" firstAttribute="bottom" secondItem="b85-44-dJF" secondAttribute="bottom" constant="-10" id="taz-29-uKW"/>
+                            <constraint firstItem="jns-8U-vqO" firstAttribute="top" secondItem="lkT-EM-yLV" secondAttribute="bottom" id="wha-sh-YML"/>
                             <constraint firstItem="Sy8-wY-GU8" firstAttribute="trailing" secondItem="b85-44-dJF" secondAttribute="trailing" constant="-20" id="z7W-Ra-Gxw"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="3a1-Yz-TeN"/>
+                                <exclude reference="5az-PF-Q8i"/>
+                                <exclude reference="7uz-kX-qBx"/>
+                                <exclude reference="MvZ-9a-nz2"/>
+                                <exclude reference="XJr-Qf-dpZ"/>
+                                <exclude reference="i7M-Zk-otl"/>
+                                <exclude reference="2GI-wP-oLS"/>
+                                <exclude reference="wha-sh-YML"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems>
                         <barButtonItem image="back" id="gQa-M0-caC">
@@ -964,6 +987,7 @@
                     <connections>
                         <outlet property="imageView" destination="b85-44-dJF" id="MPI-G8-2Uy"/>
                         <outlet property="navBar" destination="nng-Yp-4MM" id="D3U-Nt-aMt"/>
+                        <outlet property="overlay" destination="lkT-EM-yLV" id="dr2-Dk-h7S"/>
                         <outlet property="textView" destination="aLW-fz-lUh" id="Xcj-KG-dCJ"/>
                     </connections>
                 </viewController>
