--- a/leaflet/Base.lproj/Main.storyboard
+++ b/leaflet/Base.lproj/Main.storyboard
@@ -382,47 +382,6 @@
             </objects>
             <point key="canvasLocation" x="1583" y="1687"/>
         </scene>
-        <!--mapView-->
-        <scene sceneID="9XY-PX-gxF">
-            <objects>
-                <viewController storyboardIdentifier="mapView" title="mapView" useStoryboardIdentifierAsRestorationIdentifier="YES" id="09m-YL-8Uf" customClass="MapViewController" customModule="leaflet" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Lfl-hT-6Dh"/>
-                        <viewControllerLayoutGuide type="bottom" id="3xi-v0-auU"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="FMz-hH-wv0">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bX8-oo-PyC">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                        </subviews>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="bX8-oo-PyC" secondAttribute="trailing" id="8lN-o4-72D"/>
-                            <constraint firstItem="bX8-oo-PyC" firstAttribute="top" secondItem="FMz-hH-wv0" secondAttribute="top" id="Irw-ML-1kT"/>
-                            <constraint firstItem="bX8-oo-PyC" firstAttribute="leading" secondItem="FMz-hH-wv0" secondAttribute="leading" id="Xyf-1F-BfQ"/>
-                            <constraint firstItem="3xi-v0-auU" firstAttribute="top" secondItem="bX8-oo-PyC" secondAttribute="bottom" id="dgC-Bz-q3G"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="QLF-E6-Cwd">
-                        <barButtonItem key="leftBarButtonItem" image="hamburger" id="UiT-qr-lJs">
-                            <connections>
-                                <action selector="toggleSideMenu:" destination="09m-YL-8Uf" id="how-c0-Znq"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" title="List" id="zkl-fF-9QO">
-                            <connections>
-                                <action selector="revealListView:" destination="09m-YL-8Uf" id="RDa-mz-mom"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="AS9-JT-Ak4" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3353" y="1229"/>
-        </scene>
         <!--Onboarding View Controller-->
         <scene sceneID="dYO-DW-Nre">
             <objects>
@@ -722,34 +681,22 @@
                                                             <constraint firstAttribute="height" constant="60" id="Jsi-C1-z9k"/>
                                                         </constraints>
                                                     </view>
-                                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Compass.png" translatesAutoresizingMaskIntoConstraints="NO" id="N7E-Uw-3IH">
-                                                        <rect key="frame" x="50" y="10" width="60" height="60"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="60" id="AcU-8G-3LP"/>
-                                                            <constraint firstAttribute="width" constant="60" id="sxo-Wx-PAq"/>
-                                                        </constraints>
-                                                    </imageView>
+                                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqN-LF-Jlg">
+                                                        <rect key="frame" x="55" y="15" width="50" height="50"/>
+                                                        <state key="normal" image="Compass.png">
+                                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                        </state>
+                                                        <connections>
+                                                            <segue destination="c19-Tj-JAq" kind="show" identifier="toCompassViewFromStory" id="da3-LC-l5e"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
                                                 <constraints>
                                                     <constraint firstItem="0CC-cc-aRe" firstAttribute="top" secondItem="IhK-KS-yXm" secondAttribute="top" constant="10" id="6TF-LK-qZ3"/>
                                                     <constraint firstAttribute="centerY" secondItem="0CC-cc-aRe" secondAttribute="centerY" id="HuJ-4o-fYZ"/>
-                                                    <constraint firstItem="0CC-cc-aRe" firstAttribute="bottom" secondItem="N7E-Uw-3IH" secondAttribute="bottom" constant="10" id="JBH-bM-kAb"/>
-                                                    <constraint firstItem="N7E-Uw-3IH" firstAttribute="leading" secondItem="IhK-KS-yXm" secondAttribute="leading" constant="50" id="KlB-cJ-oYw"/>
                                                     <constraint firstAttribute="trailing" secondItem="0CC-cc-aRe" secondAttribute="trailing" constant="50" id="M3A-d5-zxt"/>
-                                                    <constraint firstItem="0CC-cc-aRe" firstAttribute="top" secondItem="N7E-Uw-3IH" secondAttribute="top" constant="-10" id="UpR-8b-kMQ"/>
-                                                    <constraint firstAttribute="centerY" secondItem="N7E-Uw-3IH" secondAttribute="centerY" id="XkT-xa-ig2"/>
                                                     <constraint firstAttribute="bottom" secondItem="0CC-cc-aRe" secondAttribute="bottom" constant="10" id="e6E-Pc-z54"/>
-                                                    <constraint firstItem="0CC-cc-aRe" firstAttribute="top" secondItem="N7E-Uw-3IH" secondAttribute="top" constant="-10" id="eWp-94-btX"/>
-                                                    <constraint firstItem="0CC-cc-aRe" firstAttribute="bottom" secondItem="N7E-Uw-3IH" secondAttribute="bottom" constant="-10" id="o0A-eP-cV5"/>
                                                 </constraints>
-                                                <variation key="default">
-                                                    <mask key="constraints">
-                                                        <exclude reference="JBH-bM-kAb"/>
-                                                        <exclude reference="UpR-8b-kMQ"/>
-                                                        <exclude reference="eWp-94-btX"/>
-                                                        <exclude reference="o0A-eP-cV5"/>
-                                                    </mask>
-                                                </variation>
                                             </view>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="80" id="FpK-TJ-myr"/>
